--- a/contest(11-05-18)/index.html
+++ b/contest(11-05-18)/index.html
@@ -11,9 +11,31 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
+	<noscript>Javascript не работает!</noscript>
+	<div id="header" class="toscroll">
+		<img src="img/logo.png" width="5%" height="5%">
+		<img src="img/monitor.png" id="prod">
+		<p style="margin-left: 40px; margin-top: 200px;">
+			<font size="5"><b>Want to by this?</b></font><br>
+			<br>
+			Of course.....
+			<br>
+			<button id="try">Try it!</button>
+		</p>
+		<ul>
+			<li>Products</li>
+			<li>Advantages</li>
+		</ul>
+	</div>
+ 	<div id="products" class="toscroll">
 
+ 	</div>
+ 	<div id="advantages" class="toscroll">
 
+ 	</div>
+ 	<div id="footer" class="toscroll">
 
+ 	</div>
 </body>
 
 
