--- a/contest(11-05-18)/index.html
+++ b/contest(11-05-18)/index.html
@@ -13,22 +13,34 @@
 <body>
 	<noscript>Javascript не работает!</noscript>
 	<div id="header" class="toscroll">
-		<img src="img/logo.png" width="5%" height="5%">
+		<img src="img/logo.png" width="10%" height="10%" style="margin-left: 40px;">
 		<img src="img/monitor.png" id="prod">
 		<p style="margin-left: 40px; margin-top: 200px;">
-			<font size="5"><b>Want to by this?</b></font><br>
+			<font size="7"><b>Dummy text</b></font><br>
 			<br>
-			Of course.....
+			<font size="6">Lorem Ipsum?</font>
 			<br>
 			<button id="try">Try it!</button>
 		</p>
 		<ul>
-			<li>Products</li>
-			<li>Advantages</li>
+			<li>Dummy</li>
+			<li>Lorem</li>
 		</ul>
 	</div>
  	<div id="products" class="toscroll">
-
+ 		<div id="productsmenu">
+ 				<span class="menupoint active-element"><img src="img/web.png" width="100px" height="100px">This great thing</span>
+ 				<span class="menupoint"><img src="img/web.png" width="100px" height="100px">This great thing</span>
+ 				<span class="menupoint"><img src="img/web.png" width="100px" height="100px">This great thing</span>
+ 				<span class="menupoint"><img src="img/web.png" width="100px" height="100px">This great thing</span>
+ 		</div>
+ 		<div id="product">
+ 			<img src="img/tablet.png" width="70%" height="70%" style="margin-left: 15%;">
+ 			<div class="text">
+ 				<center><h1>Lorem Ipsum is a dummy text</h1></center>
+ 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere ac ut consequat semper viverra nam libero justo. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque. Ultrices vitae auctor eu augue ut lectus arcu bibendum at. Leo vel orci porta non pulvinar neque. Aenean sed adipiscing diam donec. In hac habitasse platea dictumst quisque. Ante in nibh mauris cursus. Nam aliquam sem et tortor consequat id porta nibh venenatis. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Lacinia at quis risus sed vulputate odio ut enim. Et netus et malesuada fames ac turpis egestas sed tempus. Eget dolor morbi non arcu risus quis.</p>
+ 			</div>
+ 		</div>
  	</div>
  	<div id="advantages" class="toscroll">
 
