--- a/contest(11-05-18)/index.html
+++ b/contest(11-05-18)/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<noscript>Javascript не работает!</noscript>
-	<div id="header" class="toscroll">
+	<div id="header" class="toscroll" style="background-image: url('img/blur.jpg');">
 		<img src="img/logo.png" width="10%" height="10%" style="margin-left: 40px;">
 		<img src="img/monitor.png" id="prod">
 		<p style="margin-left: 40px; margin-top: 200px;">
@@ -22,31 +22,69 @@
 			<br>
 			<button id="try">Try it!</button>
 		</p>
-		<ul>
+		<ul style="margin-top: 4%">
 			<li>Dummy</li>
 			<li>Lorem</li>
 		</ul>
 	</div>
  	<div id="products" class="toscroll">
  		<div id="productsmenu">
- 				<span class="menupoint active-element"><img src="img/web.png" width="100px" height="100px">This great thing</span>
- 				<span class="menupoint"><img src="img/web.png" width="100px" height="100px">This great thing</span>
- 				<span class="menupoint"><img src="img/web.png" width="100px" height="100px">This great thing</span>
- 				<span class="menupoint"><img src="img/web.png" width="100px" height="100px">This great thing</span>
+ 				<span class="menupoint"><img src="img/communication.png" width="100px" height="100px">Communicating</span>
+ 				<span class="menupoint"><img src="img/community.png" width="100px" height="100px">Listening</span>
+ 				<span class="menupoint"><img src="img/cog.png" width="100px" height="100px">Controlling</span>
+ 				<span class="menupoint"><img src="img/check.png" width="100px" height="100px">Passing</span>
  		</div>
  		<div id="product">
  			<img src="img/tablet.png" width="70%" height="70%" style="margin-left: 15%;">
  			<div class="text">
  				<center><h1>Lorem Ipsum is a dummy text</h1></center>
- 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere ac ut consequat semper viverra nam libero justo. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque. Ultrices vitae auctor eu augue ut lectus arcu bibendum at. Leo vel orci porta non pulvinar neque. Aenean sed adipiscing diam donec. In hac habitasse platea dictumst quisque. Ante in nibh mauris cursus. Nam aliquam sem et tortor consequat id porta nibh venenatis. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Lacinia at quis risus sed vulputate odio ut enim. Et netus et malesuada fames ac turpis egestas sed tempus. Eget dolor morbi non arcu risus quis.</p>
+ 				<p style="font-size: 1.2rem;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere ac ut consequat semper viverra nam libero justo. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque. Ultrices vitae auctor eu augue ut lectus arcu bibendum at. Leo vel orci porta non pulvinar neque. Aenean sed adipiscing diam donec. In hac habitasse platea dictumst quisque. Ante in nibh mauris cursus. Nam aliquam sem et tortor consequat id porta nibh venenatis. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Lacinia at quis risus sed vulputate odio ut enim. Et netus et malesuada fames ac turpis egestas sed tempus. Eget dolor morbi non arcu risus quis.</p>
  			</div>
  		</div>
  	</div>
  	<div id="advantages" class="toscroll">
-
+ 		<div id="why">
+ 			<img src="img/site.png" width="60%" height="100%">
+ 			<div style="list-style-image: url('img/ok.png');">
+ 				<h1>Why choose us?</h1>
+ 				<ul>
+ 					<li>Sed nisi lacus sed viverra tellus in hac habitasse platea.</li>
+ 					<li>Tellus molestie nunc non blandit massa</li>
+ 					<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+ 					<li>Ultrices vitae auctor eu augue ut lectus arcu bibendum at</li>
+ 					<li>Lorem Ipsum is a dummy text</li>
+ 				</ul>
+ 			</div>
+ 		</div>
  	</div>
  	<div id="footer" class="toscroll">
-
+ 		<div class="footer-text">
+ 			<ul>
+ 				<h2>About us</h2>
+ 				<li>About us</li>
+ 				<li>Why us</li>
+ 				<li>Why us</li>
+ 				<li>Why us</li>
+ 				<li>Customer stories</li>
+ 				<li>Contact us</li>
+ 			</ul>
+ 		</div>
+ 		<div class="footer-text">
+ 			<ul>
+ 				<h2>About us</h2>
+ 				<li>About us</li>
+ 				<li>Why us</li>
+ 				<li>Why us</li>
+ 				<li>Why us</li>
+ 				<li>Customer stories</li>
+ 				<li>Contact us</li>
+ 			</ul>
+ 		</div>
+ 		<div class="footer-text">
+ 			<h2>Testimoanials</h2>
+ 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna ac placerat vestibulum lectus mauris ultrices. Tellus molestie nunc non blandit massa.</p>
+ 		</div>
+ 		<img src="img/logo.png" width="10%" height="10%">
  	</div>
 </body>
 
