--- a/lynx/index.html
+++ b/lynx/index.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="robots,Alexa, Amazon, Lynx, robot">
 	<meta name="author" content="Jolken">
 	<link rel="stylesheet" href="css/main.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
 	<noscript>Javascript не работает!</noscript>
@@ -37,8 +38,7 @@
  			<div class="text">
  				<center><h1>Робот Lynx</h1></center>
  				<img src="img/robot.png" width="70%" height="70%" style="margin-left: 15%;">
- 				<p style="font-size: 1.2rem;" align="center">Lynx від Ubtech це унікальний робот-гуманоїд, який тільки зовні виглядає незграбно. Задайте Lynx питання або дайте йому команду, і він поверне його голову до вас, вислухає і зробить, що ви просите.<br> Спілкуючись з ним і спостерігаючи за його поведінкою, складається враження, що робота оснастили серцем. І спритністю. Lynx може демонструвати пози йоги, танцювати і навіть робить "обнімашкі". <br><br><center><h2>Ну не чудо?</h2></center>
-</p>
+ 				<p style="font-size: 1.2rem;" align="center">Lynx від Ubtech це унікальний робот-гуманоїд, який тільки зовні виглядає незграбно. Задайте Lynx питання або дайте йому команду, і він поверне його голову до вас, вислухає і зробить, що ви просите.<br> Спілкуючись з ним і спостерігаючи за його поведінкою, складається враження, що робота оснастили серцем. І спритністю. Lynx може демонструвати пози йоги, танцювати і навіть робить "обнімашкі". <br><br><center><h2>Ну не чудо?</h2></center></p>
  			</div>
  		</div>
 
@@ -63,7 +63,7 @@
 </div>
  	<div id="buyplace">
 
- 		<b><font size="6"><center>До кінця акції залишилось<div id="time"></div>секунд</p></center></font></b>
+ 		<b><font size="6"><center>До кінця акції залишилось<div id="time"></div>секунд</center></font></b>
  		<center><button id="buyb"><b>Замовити</b></button></center>
  	</div>
  	<!-- Подвальчик -->
@@ -96,6 +96,5 @@
  	</div>
 
 </body>
-<script src="js/script.js"></script>
 
 </html>
