--- a/lynx/index.html
+++ b/lynx/index.html
@@ -44,9 +44,11 @@
 
 <div style="padding-bottom: 2%;">
  	<div id="slider">
+		<button class="sliderbutton" onclick="changeSlide(slider, -1)">←</button>
 		<img src="img/slide1.png" width="30%" class="slide hidden">
 		<img src="img/slide2.png" width="30%" class="slide hidden">
 		<img src="img/slide3.png" width="30%" class="slide hidden">
+		<button class="sliderbutton" onclick="changeSlide(slider, 1)">→</button>
 	</div>
 </div>
  <div id="backadv">
